--- a/atalho.html
+++ b/atalho.html
@@ -8,16 +8,24 @@
 <style>
   :root {
     --bg-dark: #121212;
-    --bg-card: #1e1e1e;
+    --bg-light: #f9f9f9;
+    --bg-card-dark: #1e1e1e;
+    --bg-card-light: #ffffff;
     --text-light: #e0e0e0;
+    --text-dark: #222222;
     --primary-color: #4caf50;
     --primary-hover: #388e3c;
     --shadow-dark: rgba(0, 0, 0, 0.7);
+    --shadow-light: rgba(0,0,0,0.1);
     --transition-speed: 0.35s;
-    --code-bg: #2a2a2a;
-    --code-border: #444;
-    --table-header-bg: #272727;
-    --table-row-bg: #1f1f1f;
+    --code-bg-dark: #2a2a2a;
+    --code-bg-light: #f4f4f4;
+    --code-border-dark: #444;
+    --code-border-light: #ccc;
+    --table-header-bg-dark: #272727;
+    --table-header-bg-light: #eaeaea;
+    --table-row-bg-dark: #1f1f1f;
+    --table-row-bg-light: #f8f8f8;
   }
   *, *::before, *::after {
     box-sizing: border-box;
@@ -35,13 +43,17 @@
     transition: background-color var(--transition-speed), color var(--transition-speed);
     padding-bottom: 3rem;
   }
+  body.light {
+    background-color: var(--bg-light);
+    color: var(--text-dark);
+  }
   @keyframes fadeIn {
     to { opacity: 1; }
   }
   header {
     position: sticky;
     top: 0;
-    background-color: #1a1a1a;
+    background-color: var(--bg-card-dark);
     color: var(--text-light);
     padding: 1rem 2rem;
     display: flex;
@@ -50,6 +62,12 @@
     flex-wrap: wrap;
     box-shadow: 0 0 12px var(--shadow-dark);
     z-index: 1000;
+    transition: background-color var(--transition-speed), color var(--transition-speed);
+  }
+  body.light header {
+    background-color: var(--bg-card-light);
+    color: var(--text-dark);
+    box-shadow: 0 0 12px var(--shadow-light);
   }
   header h1 {
     margin: 0;
@@ -75,6 +93,9 @@
     border-radius: 6px;
     transition: background-color 0.3s, color 0.3s, transform 0.2s;
     font-size: 1rem;
+  }
+  body.light nav a {
+    color: var(--text-dark);
   }
   nav a:hover,
   nav a:focus {
@@ -106,6 +127,10 @@
     flex: 0 0 auto;
     margin-left: auto;
     will-change: transform;
+  }
+  body.light button#toggle-theme {
+    border-color: var(--text-dark);
+    color: var(--text-dark);
   }
   button#toggle-theme:hover,
   button#toggle-theme:focus {
@@ -144,14 +169,23 @@
     margin-bottom: 1rem;
     color: #ccc;
   }
+  body.light main p {
+    color: #333;
+  }
   code, pre {
     font-family: 'Source Code Pro', monospace, monospace;
-    background-color: var(--code-bg);
-    border: 1px solid var(--code-border);
+    background-color: var(--code-bg-dark);
+    border: 1px solid var(--code-border-dark);
     border-radius: 6px;
     padding: 0.3rem 0.5rem;
     font-size: 0.95rem;
     user-select: text;
+    transition: background-color var(--transition-speed), border-color var(--transition-speed), color var(--transition-speed);
+  }
+  body.light code, body.light pre {
+    background-color: var(--code-bg-light);
+    border: 1px solid var(--code-border-light);
+    color: var(--text-dark);
   }
   pre {
     padding: 1rem;
@@ -164,6 +198,9 @@
     margin-bottom: 1rem;
     color: #ddd;
   }
+  body.light ul {
+    color: #444;
+  }
   ul li {
     margin-bottom: 0.4rem;
   }
@@ -173,18 +210,32 @@
     margin-bottom: 2rem;
     color: #ddd;
   }
+  body.light table {
+    color: var(--text-dark);
+  }
   th, td {
-    border: 1px solid var(--code-border);
+    border: 1px solid var(--code-border-dark);
     padding: 0.8rem 1rem;
     text-align: left;
     vertical-align: top;
+    transition: border-color var(--transition-speed), color var(--transition-speed);
+  }
+  body.light th, body.light td {
+    border: 1px solid var(--code-border-light);
+    color: var(--text-dark);
   }
   th {
-    background-color: var(--table-header-bg);
+    background-color: var(--table-header-bg-dark);
     font-weight: 700;
   }
+  body.light th {
+    background-color: var(--table-header-bg-light);
+  }
   tr:nth-child(even) {
-    background-color: var(--table-row-bg);
+    background-color: var(--table-row-bg-dark);
+  }
+  body.light tr:nth-child(even) {
+    background-color: var(--table-row-bg-light);
   }
   a.button-back {
     display: inline-block;
@@ -212,13 +263,19 @@
     top: 100px;
     right: 20px;
     max-width: 220px;
-    background-color: var(--bg-card);
+    background-color: var(--bg-card-dark);
     border-radius: 10px;
     padding: 1rem 1.2rem;
     box-shadow: 0 4px 12px var(--shadow-dark);
     user-select: none;
     font-size: 0.9rem;
     display: none;
+    transition: background-color var(--transition-speed), color var(--transition-speed);
+  }
+  body.light aside#toc {
+    background-color: var(--bg-card-light);
+    color: var(--text-dark);
+    box-shadow: 0 4px 12px var(--shadow-light);
   }
   aside#toc h4 {
     color: var(--primary-color);
@@ -237,6 +294,9 @@
     color: var(--text-light);
     text-decoration: none;
     transition: color 0.3s;
+  }
+  body.light aside#toc ul li a {
+    color: var(--text-dark);
   }
   aside#toc ul li a:hover,
   aside#toc ul li a:focus {
@@ -394,13 +454,11 @@
 
   function updateToggleButton(isDark) {
     if(isDark) {
-      toggleBtn.textContent = '';
       toggleBtn.classList.add('dark');
       toggleBtn.innerHTML = `<svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
         <path d="M12 3v2m6.364 1.636l-1.414 1.414M21 12h-2M17.364 17.364l-1.414-1.414M12 19v2M6.636 17.364l1.414-1.414M3 12H1m4.95-4.95l1.414 1.414" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
       </svg> Modo Claro`;
     } else {
-      toggleBtn.textContent = '';
       toggleBtn.classList.remove('dark');
       toggleBtn.innerHTML = `<svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
         <path d="M12 3v2m6.364 1.636l-1.414 1.414M21 12h-2M17.364 17.364l-1.414-1.414M12 19v2M6.636 17.364l1.414-1.414M3 12H1m4.95-4.95l1.414 1.414" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -408,19 +466,20 @@
     }
   }
 
+  // Inicializa com tema salvo ou padrão escuro
   const savedTheme = localStorage.getItem('theme');
-  if(savedTheme === 'dark') {
-    body.classList.add('dark');
-    updateToggleButton(true);
-  } else {
+  if(savedTheme === 'light') {
+    body.classList.add('light');
     updateToggleButton(false);
+  } else {
+    body.classList.remove('light');
+    updateToggleButton(true);
   }
 
   toggleBtn.addEventListener('click', () => {
-    body.classList.toggle('dark');
-    const isDark = body.classList.contains('dark');
-    updateToggleButton(isDark);
-    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    const isLight = body.classList.toggle('light');
+    updateToggleButton(!isLight);
+    localStorage.setItem('theme', isLight ? 'light' : 'dark');
   });
 </script>
 </body>
